# clx-autoclearmemory

./: .gitignore  DESIGN-graph.md  README.md  config.yaml.example  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml  publish.yml
.grok-briefs/: ci-doctor-probe-skip.md  ci-hermes-probe-skip.md  fix-live-audit-0619.md  p1-pin-protection.md  p2-doctor-db-probes.md  perf-0619.md
Docs/: README.md  agent-surfaces.md  architecture.md  design.md  installation.md  rust-architecture.md
adapters/claude/.claude-plugin/: plugin.json
adapters/claude/skills/forgetforge/: SKILL.md
adapters/codex/: mcp-snippet.toml
adapters/cron/: forgetforge-prune.cron
adapters/hermes/: README.md
adapters/systemd/: forgetforge-pruner.service
commands/: forgetforge-doctor.md  forgetforge-recall.md  forgetforge-status.md
rust/forgetforge_engine/: Cargo.toml  pyproject.toml
rust/forgetforge_engine/src/: lib.rs  main.rs  scoring.rs  tier.rs
scripts/: repack_native_wheel.py
skills/forgetforge/: SKILL.md
src/forgetforge/: __init__.py  archive.py  cli.py  config.py  contradiction.py  db.py  graph.py  hot_inject.py  import_brief.py  init_assets.py  pruner.py  recall.py  rust_bridge.py  schemas.py  store.py
src/forgetforge/adapters/: __init__.py  hermes.py
src/forgetforge/doctor/: catalog.json  framework.py  probes.py
tests/: test_cli.py  test_config.py  test_contradiction.py  test_db_recall.py  test_doctor.py  test_fts.py  test_graph.py  test_hermes_adapter.py  test_hot_inject.py  test_import_brief.py  test_packaging_policy.py  test_pruner_archive.py  test_pruner_lock.py  test_recall_batching.py  test_recall_stats.py  test_rust_bridge.py  test_scoring.py  test_store.py
