[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "cluxion-Agentplugin-AutoClearMemory"
version = "0.3.7"
description = "Universal agent memory plugin (ForgetForge): recall-centric retention, tiered forgetting, Rust scoring engine for Hermes, Claude Code, and Codex."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "cluxion", email = "algocean1204@users.noreply.github.com" },
]
keywords = [
    "cluxion",
    "forgetforge",
    "hermes-agent",
    "claude-code",
    "codex",
    "memory",
    "plugin",
    "recall",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "PyYAML>=6.0",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "build>=1.2",
    "twine>=6.0",
    "wheel>=0.45",
]

[project.scripts]
forgetforge = "forgetforge.cli:main"

[project.entry-points."hermes_agent.plugins"]
cluxion-agentplugin-autoclearmemory = "forgetforge.adapters.hermes"

[project.urls]
Homepage = "https://github.com/cluxion/cluxion-Agentplugin-AutoClearMemory"
Repository = "https://github.com/cluxion/cluxion-Agentplugin-AutoClearMemory"
Issues = "https://github.com/cluxion/cluxion-Agentplugin-AutoClearMemory/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/forgetforge"]

# Ship setup assets inside the package so `forgetforge init` works from an
# installed wheel; source checkouts fall back to these same repo-root paths.
[tool.hatch.build.targets.wheel.force-include]
"adapters" = "forgetforge/data/adapters"
"config.yaml.example" = "forgetforge/data/config.yaml.example"
"src/forgetforge/doctor/catalog.json" = "forgetforge/doctor/catalog.json"

[tool.hatch.build.targets.sdist]
include = [
    "src/forgetforge",
    "rust/forgetforge_engine",
    "adapters",
    "tests",
    "Docs",
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "config.yaml.example",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["F", "I", "UP", "B", "SIM", "RUF"]
